Pre-digital age.

--- a/courses.tex
+++ b/courses.tex
@@ -63,12 +63,12 @@ data science product, such as a web application, a mobile application, or a web 
 \paragraph{Bibliography:}
 \begin{itemize}
   \itemsep 0pt
-  \item Nina Zumel and John Mount. Practical Data Science with R. Manning, 2nd Edition, 2019.
-  \item Hadley Wickham and Garret Grolemund, R for Data Science: Import, Tidy, Transform, Visualize, and Model Data. O’Reilly Media, 2017.
-  \item John D. Kelleher and Brendan Tierney. Data science, MIT Press, 2018.
+  \item \fullcite{Zumel2019}.
+  \item \fullcite{Hickham2023}.
+  \item \fullcite{Kelleher2018}.
 \end{itemize}
 
-The first two books (Zumel and Mount, and Wickham and Grolemund) are available online for free.
+The first two books (\citeauthor{Zumel2019,Hickham2023}) are available online for free.
 
 % \paragraph{Must read:}
 % \begin{itemize}
@@ -81,6 +81,7 @@ The first two books (Zumel and Mount, and Wickham and Grolemund) are available o
 Any required extra material will be made available in Google Classroom.
 \thispagestyle{empty}
 
+\newpage
 \paragraph{Calendar:} The expected schedule is presented below.
 \thispagestyle{empty}
 
@@ -148,8 +149,6 @@ presented per day, with 30 minutes for each presentation and 20 minutes for ques
 
 \emph{Course plan (\the\year{})}
 
-\nth{1} Semester of \the\year{}
-
 Prof. Filipe A. N. Verri
 
 \paragraph{Number of students:} Approx. 20 (no more than 40 students)
@@ -193,7 +192,7 @@ documentation, and deployment.  The results must be presented in a short essay (
 pages) and a 30 minutes presentation.  The trained models must be incorporated in a data
 science product, such as a web application, a mobile application, or a web service.
 
-\newpage
+\thispagestyle{empty}
 \paragraph{Bibliography:}
 \begin{itemize}
   \item Nina Zumel and John Mount. Practical Data Science with R. Manning, 2nd Edition, 2019.
@@ -212,6 +211,7 @@ The first two books (Zumel and Mount, and Wickham and Grolemund) are available o
 \end{itemize}
 Any extra material will be made available in Google Classroom.
 
+\newpage
 \paragraph{Calendar:} The expected schedule is presented below.
 \thispagestyle{empty}
 
