--- a/inductive.tex
+++ b/inductive.tex
@@ -1,5 +1,10 @@
 \chapter{Statistical learning theory}
 
+
+\chapterprecishere{%
+  To  understand  God's  thoughts  we  must study statistics, for these are the measure of his purpose.
+  \par\raggedleft--- \textup{Florence Nightingale}, her diary}
+
 Recommended reading: IEEE TRANSACTIONS ON NEURAL NETWORKS, VOL. 10, NO. 5, SEPTEMBER 1999
 An Overview of Statistical Learning Theory.
 
