--- a/references.bib
+++ b/references.bib
@@ -50,3 +50,48 @@
   publisher = {Taylor & Francis},
   doi = {10.1080/00031305.1993.10475938},
   URL = {https://www.tandfonline.com/doi/abs/10.1080/00031305.1993.10475938}}
+
+@article{Beaumont2013,
+  author = {Beaumont, Peter B and Bednarik, Robert G},
+  year = {2013},
+  issue_date = {2013},
+  publisher = {Australian Rock Art Research Association},
+  address = {Caulfield South, Victoria, Australia},
+  volume = {30},
+  number = {1},
+  url = {https://search.informit.org/doi/10.3316/informit.488018706238392},
+  abstract = {A comprehensive review of the pre-Holocene palaeoart evidence from sub-Saharan Africa is presented. The scant figurative component appears to be entirely confined to the Later Stone Age. Beads and pendants range back further, to the latter half of the Middle Stone Age. The same applies to the notched items that are invariably based on either bone or red ochre. Incised lines have been reported from both of those periods, and extend into the preceding Early Middle Stone Age. Preliminary data would suggest that a comparable timespan is probably covered by cupules and grooves. Pigment manuports, sometimes with use damage, are traceable to late in the Earlier Stone Age. And lastly are occasional exotic manuports, the collection of which could have spanned the entire Stone Age.},
+  journal = {Rock Art Research},
+  pages = {33–54},
+  numpages = {22}}
+
+@book{Ifrah1998,
+  added-at = {2010-04-30T23:14:41.000+0200},
+  address = {London},
+  author = {Ifrah, Georges},
+  biburl = {https://www.bibsonomy.org/bibtex/29dc79fd61c85481e4ce46a83501776ca/wujastyk},
+  description = {Wujastyk's main bibtex file, April 30, 2010},
+  interhash = {ae46c80b80b261ecdad3694e067c69d1},
+  intrahash = {9dc79fd61c85481e4ce46a83501776ca},
+  isbn = {1 86046 324 x},
+  keywords = {mathematics},
+  note = {First published in French, 1994},
+  owner = {dom},
+  publisher = {Harvill},
+  source = {Own copy},
+  timestamp = {2010-04-30T23:15:04.000+0200},
+  title = {The Universal History of Numbers, from Prehistory to the Invention of the Computer},
+  year = 1998}
+
+@article{Grajalez2013,
+  author = {Grajalez, Carlos Gómez and Magnello, Eileen and Woods, Robert and Champkin, Julian},
+  title = {Great moments in statistics},
+  journal = {Significance},
+  volume = {10},
+  number = {6},
+  pages = {21-28},
+  doi = {https://doi.org/10.1111/j.1740-9713.2013.00706.x},
+  url = {https://rss.onlinelibrary.wiley.com/doi/abs/10.1111/j.1740-9713.2013.00706.x},
+  eprint = {https://rss.onlinelibrary.wiley.com/doi/pdf/10.1111/j.1740-9713.2013.00706.x},
+  abstract = {How did the ancient Babylonians feed their people? How did Florence Nightingale transform nursing? How did the allies make D-Day a success? How do you know that smoking may kill you? The answers are all “by using statistics”. To accompany the timeline overleaf we present a selection of great statistical landmarks of the past – moments when statistics changed history.},
+  year = {2013}}
