--- a/history.tex
+++ b/history.tex
@@ -192,12 +192,12 @@ science.
 influential figures in the field.  I reproduce it here with some minor changes, including
 some omissions and additions.
 
-Like \citeauthor{Kelleher2018}, I first talk about data collection, and them data analysis.
+Like \citeauthor{Kelleher2018}, I address data collection, and then data analysis.
 
 \subsection{Timeline of data collection}
 
-The importance of collecting data goes without saying.  Data fuels the analysis and
-decision making.  The following are some of the most important milestones in the history
+The importance of collecting data goes without saying.  Data fuels analysis and
+decision making.  In the following, I present some of the most important milestones in the history
 of data collection.
 
 % A TikZ picture with the data collection timeline.
@@ -215,24 +215,29 @@ of data collection.
   \caption{
     Timeline of the ages of data collection.
   }
+  \label{fig:collection-history}
 \end{figure}
+
+\Cref{fig:collection-history} illutrates the timeline.
 
 \subsubsection{Pre-digital age}
 
 We can consider the earliest records of data collection to be the notches on sticks and
 bones to keep tracking of passing of time.  The Lebombo bone, a baboon fibula with
-notches, is probably the earliest known mathematical object.  They estimate it is more
+notches, is probably the earliest known mathematical object.  It was found in the Lebombo
+Mountains located between South Africa and Eswatini.
+They estimate it is more
 than 40,000 years old. It is conjectured to be a tally stick, but its exact purpose is
 unknown. Its 29 notches suggests that may have been used as a lunar phase counter.
 However, since it is broken at one end, the 29 notches may or may not be the total
 number\footcite{Beaumont2013}.
 
-Since the early forms of writing, humanity abilities to record events and informamtion
+Since the early forms of writing, humanity abilities to record events and information
 increased significantly.  The first known written records date back to 3,500 BC, the
 Sumerian archaic (pre-cuneiform) writing.  This writing system was used to represent
 commodities using clay tokens and to record transactions\footcite{Ifrah1998}.
 
-Another important milestone in the history of data collection is the records of
+Another important milestone in the history of data collection is the record of
 demographic data.  One of first known census was conducted in 3,800 BC in the Babylonian
 Empire.  It was ordered to assess the population and resources of
 his empire\footcite{Grajalez2013}.
@@ -240,18 +245,17 @@ his empire\footcite{Grajalez2013}.
 Moving forward many years, I consider a major influential figure in the history of data
 collection to be Florence Nightingale (1820 -- 1910).  She was a passionate statistician
 and probably the first person to use statistics to influence public and official
-opinion\footcite{Grajalez2013}.  The meticulous records she kept during the Crimean War
+opinion.  The meticulous records she kept during the Crimean War
 (1853 -- 1856) were the evidence that saved lives.  She was also the first to use
 statistical graphics to present data in a way that was easy to understand.  She is
 credited with developing a form of the pie chart now known as the polar area
-diagram\footcite{Grajalez2013}.  She also reformed healthcare in the United Kingdom and
-is considered the founder of modern nursing.
+diagram.  She also reformed healthcare in the United Kingdom and
+is considered the founder of modern nursing\footcite{Grajalez2013}.
 
 \begin{mainbox}{Florence Nightingale}
   \begin{itemize}
     \item Passionate statistician.
     \item First person to use statistics to influence public and official opinion.
-    \item She used statistics to change society.
     \item Organized data from garden fruits and vegetables into numerical tables at the age of 9.
     \item At 20 she was receiving two-hour lessons from a Cambridge-trained mathematician.
     \item She found the sight of a long column of figures “perfectly reviving”.
