Finshed pre-digital era.

--- a/history.tex
+++ b/history.tex
@@ -232,17 +232,34 @@ unknown. Its 29 notches suggests that may have been used as a lunar phase counte
 However, since it is broken at one end, the 29 notches may or may not be the total
 number\footcite{Beaumont2013}.
 
-Since the early forms of writing, humanity abilities to record events and information
-increased significantly.  The first known written records date back to 3,500 BC, the
-Sumerian archaic (pre-cuneiform) writing.  This writing system was used to represent
-commodities using clay tokens and to record transactions\footcite{Ifrah1998}.
-
 Another important milestone in the history of data collection is the record of
 demographic data.  One of first known census was conducted in 3,800 BC in the Babylonian
 Empire.  It was ordered to assess the population and resources of
-his empire\footcite{Grajalez2013}.
+his empire.  Records were stored on  clay  tiles\footcite{Grajalez2013}.
 
-Moving forward many years, I consider a major influential figure in the history of data
+Since the early forms of writing, humanity abilities to record events and information
+increased significantly.  The first known written records date back to around 3,500 BC, the
+Sumerian archaic (pre-cuneiform) writing.  This writing system was used to represent
+commodities using clay tokens and to record transactions\footcite{Ifrah1998}.
+
+``Data storage'' was also a challenge.  Some important devices that increased our capacity
+to register textual information are the Sumerian clay tablets (3,500 BC), the Egyptian
+papyrus (3,000 BC), the Chinese paper (2,000 BC), the Phoenician alphabet (1,000 BC), the
+Greek alphabet (800 BC), the Roman wax tablets (100 BC), the codex (100 AD), the
+printing press (1440), the typewriter (1868).
+
+% Talvez citar na parte de análise de dados
+% Other mechanisms were also developed to store information in a more structured way.  Some
+% important devices are
+% the abacus (2,700 BC), the Antikythera mechanism (150 -- 100 BC), the
+% Chinese South Pointing Chariot (260 AD), the Pascaline (1642), the Jacquard loom (1801),
+% the Babbage Difference Engine (1822), the Babbage Analytical Engine (1837).
+
+Besides those improvements in unstructured data storage, at least in the Western and
+Middle Eastern world, there are no significant advances in structured data collection
+until the \nth{19} century.  (A Eastern timeline research is pending.)
+
+I consider a major influential figure in the history of data
 collection to be Florence Nightingale (1820 -- 1910).  She was a passionate statistician
 and probably the first person to use statistics to influence public and official
 opinion.  The meticulous records she kept during the Crimean War
@@ -266,6 +283,23 @@ is considered the founder of modern nursing\footcite{Grajalez2013}.
     \item She was the first to use statistical graphics to present data in a way that was easy to understand.
     \item She is credited with developing a form of the pie chart now known as the polar area diagram.
     \item She reformed healthcare in the United Kingdom and is considered the founder of modern nursing.
+  \end{itemize}
+\end{mainbox}
+
+\begin{mainbox}{Pre-digital age}
+  \begin{itemize}
+    \item Lebombo bone (40,000 BC)
+    \item Babylonian census (3,800 BC)
+    \item Sumerian archaic (pre-cuneiform) writing (3,500 BC)
+    \item Egyptian papyrus (3,000 BC)
+    \item Chinese paper (2,000 BC)
+    \item Phoenician alphabet (1,000 BC)
+    \item Greek alphabet (800 BC)
+    \item Roman wax tablets (100 BC)
+    \item Codex (100 AD)
+    \item Printing press (1440)
+    \item Typewriter (1868)
+    \item Florence Nightingale (1820 -- 1910)
   \end{itemize}
 \end{mainbox}
 
