--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,5 @@
-\documentclass[twoside,a5paper,10pt,openright]{memoir}
+\documentclass[twoside,10pt,openright]{memoir}
+\setstocksize{230mm}{160mm}
 
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
