Fixing some dates.

--- a/history.tex
+++ b/history.tex
@@ -244,9 +244,8 @@ commodities using clay tokens and to record transactions\footcite{Ifrah1998}.
 
 ``Data storage'' was also a challenge.  Some important devices that increased our capacity
 to register textual information are the Sumerian clay tablets (3,500 BC), the Egyptian
-papyrus (3,000 BC), the Chinese paper (2,000 BC), the Phoenician alphabet (1,000 BC), the
-Greek alphabet (800 BC), the Roman wax tablets (100 BC), the codex (100 AD), the
-printing press (1440), the typewriter (1868).
+papyrus (3,000 BC), the Greek alphabet (800 BC), the Roman wax tablets (100 BC), the codex
+(100 AD), the Chinese paper (200 AD), the printing press (1440), the typewriter (1868).
 
 % Talvez citar na parte de análise de dados
 % Other mechanisms were also developed to store information in a more structured way.  Some
@@ -292,11 +291,11 @@ is considered the founder of modern nursing\footcite{Grajalez2013}.
     \item Babylonian census (3,800 BC)
     \item Sumerian archaic (pre-cuneiform) writing (3,500 BC)
     \item Egyptian papyrus (3,000 BC)
-    \item Chinese paper (2,000 BC)
     \item Phoenician alphabet (1,000 BC)
     \item Greek alphabet (800 BC)
     \item Roman wax tablets (100 BC)
     \item Codex (100 AD)
+    \item Chinese paper (200 AD)
     \item Printing press (1440)
     \item Typewriter (1868)
     \item Florence Nightingale (1820 -- 1910)
