--- a/references.bib
+++ b/references.bib
@@ -78,7 +78,6 @@
   note = {First published in French, 1994},
   owner = {dom},
   publisher = {Harvill},
-  source = {Own copy},
   timestamp = {2010-04-30T23:15:04.000+0200},
   title = {The Universal History of Numbers, from Prehistory to the Invention of the Computer},
   year = 1998}
@@ -95,3 +94,20 @@
   eprint = {https://rss.onlinelibrary.wiley.com/doi/pdf/10.1111/j.1740-9713.2013.00706.x},
   abstract = {How did the ancient Babylonians feed their people? How did Florence Nightingale transform nursing? How did the allies make D-Day a success? How do you know that smoking may kill you? The answers are all “by using statistics”. To accompany the timeline overleaf we present a selection of great statistical landmarks of the past – moments when statistics changed history.},
   year = {2013}}
+
+@article{Codd1970,
+  author = {Codd, E. F.},
+  title = {A Relational Model of Data for Large Shared Data Banks},
+  year = {1970},
+  issue_date = {June 1970},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  volume = {13},
+  number = {6},
+  issn = {0001-0782},
+  url = {https://doi.org/10.1145/362384.362685},
+  doi = {10.1145/362384.362685},
+  abstract = {Future users of large data banks must be protected from having to know how the data is organized in the machine (the internal representation). A prompting service which supplies such information is not a satisfactory solution. Activities of users at terminals and most application programs should remain unaffected when the internal representation of data is changed and even when some aspects of the external representation are changed. Changes in data representation will often be needed as a result of changes in query, update, and report traffic and natural growth in the types of stored information.Existing noninferential, formatted data systems provide users with tree-structured files or slightly more general network models of the data. In Section 1, inadequacies of these models are discussed. A model based on n-ary relations, a normal form for data base relations, and the concept of a universal data sublanguage are introduced. In Section 2, certain operations on relations (other than logical inference) are discussed and applied to the problems of redundancy and consistency in the user's model.},
+  journal = {Commun. ACM},
+  month = {jun},
+  pages = {377–387}}
