Finished digital era.

--- a/history.tex
+++ b/history.tex
@@ -308,6 +308,27 @@ is considered the founder of modern nursing\footcite{Grajalez2013}.
 
 \subsubsection{Digital age}
 
+In the modern period, several devices were developed to store digital\footnote{Digital
+means the representation of information in discrete form.  The term comes from the Latin
+digitus, meaning finger, because it is the natural way to count using fingers.}
+information.  One particular device that is important for data collection is the punched
+card.  It is a piece of stiff paper that contains digital information represented by the
+presence or absence of holes in predefined positions.  The information can be read by a
+mechanical or electrical device called a card reader.  The earliest famous usage of
+punched cards was by Basile Bouchon (1725) to control looms.  Most of the advances until
+the 1880s were about the automation of machines using hand-punched cards, and not
+particularly specialized for data collection.
+
+However, the 1890 census in the United States was the first to use machine-readable
+punched cards to tabulate data. Processing 1880 census data took eight years, so the
+Census Bureau contracted Herman Hollerith (1860 -- 1929) to design and build a tabulating
+machine.  He founded the Tabulating Machine Company in 1896, which later merged with other
+companies to become International Business Machines Corporation (IBM) in 1924. Later
+models of the tabulating machine were widely used for business applications such as
+accounting and inventory control. Punched card technology remained a prevalent method of
+data processing for several decades until more advanced electronic computers were
+developed in the mid-\nth{20} century.
+
 The invention of the digital computer is responsible for a revolution in data collection.
 The amount of information we can capture and store increased exponentially.  ENIAC (1945) was
 the first electronic general-purpose computer.  It was Turing-complete, digital, and
@@ -315,38 +336,17 @@ capable of being reprogrammed to solve a full range of computing problems.
 It had 20 words of internal memory, each capable of storing a 10-digit decimal integer number.
 Programs and data were entered by setting switches and inserting punched cards.
 
-Although punched cards were used as early as 1725 by Basile Bouchon {\color{red} verify
-information} to control looms, I could not find any hystorical device that automatically
-collected data from sensors and stored in punched cards.  In 1890, Herman Hollerith used
-punched cards to tabulate the 1880 census {\color{red} verify information}.
-Hollerith's invention eventually led to the founding of the Tabulating Machine Company in
-1896, which later merged with other companies to become International Business Machines
-Corporation (IBM) in 1924. The punched card technology remained a prevalent method of data
-processing for several decades until more advanced electronic computers were developed in
-the mid-20th century.
-
-In 1937,
-George Stibitz used punched cards to send data from New York to his Complex Number
-Calculator in Hanover {\color{red} verify information}. The first device that collected
-data from sensors and stored in magnetic tape was the IBM 7700 Data Acquisition System
-(1965) {\color{red} verify information}.  It was a general-purpose data acquisition system
-that could be programmed to collect data from a variety of sources.  It was used in
-scientific and industrial applications.  NASA used it to collect data from the Apollo
-missions.
-
-The probable first example of data collection in the digital age is the US Census Bureau.
-The Census Bureau is the leading source of quality data about the nation's people and economy.
-It is the only source of data for the official statistical information about the
-characteristics of the population and housing.  The first census was conducted in 1790.
-The first computerized census was conducted in 1960 {\color{red} verify information and
-provide more details}.
+It goes without saying that digital computers have become much more powerful and
+sophisticated since then. For the 1950 census, the United States Census Bureau used the
+UNIVAC I (Universal Automatic Computer I), the first commercially produced computer in the
+United States\footnote{Read more in \url{https://www.census.gov/history/www/innovations/}.}.
 
 \begin{mainbox}{Digital age}
   \begin{itemize}
-    \item Hollerith's tabulating machine (1890)
+    \item Punched card (1725)
+    \item 1890 census and Hollerith's tabulating machine (1890)
     \item ENIAC (1945)
-    \item IBM 7700 Data Acquisition System (1965)
-    \item US Census Bureau (1960)
+    \item UNIVAC I (1950)
   \end{itemize}
 \end{mainbox}
 
@@ -354,7 +354,7 @@ provide more details}.
 
 In 1970, Edgar Frank Codd (1923 -- 2003) published a paper entitled ``A Relational Model
 of Data for Large Shared Data Banks''\footcite{Codd1970}.  In this paper, he introduced
-the concept of a relational model for database management {\color{red} verify information and
+the concept of a relational model for database management {\color{red}
 provide more details}.
 
 \subsection{Timeline of data analysis}
