--- a/history.tex
+++ b/history.tex
@@ -309,7 +309,7 @@ is considered the founder of modern nursing\footcite{Grajalez2013}.
 \subsubsection{Digital age}
 
 In the modern period, several devices were developed to store digital\footnote{Digital
-means the representation of information in discrete form.  The term comes from the Latin
+means the representation of information in (finite) discrete form.  The term comes from the Latin
 digitus, meaning finger, because it is the natural way to count using fingers.}
 information.  One particular device that is important for data collection is the punched
 card.  It is a piece of stiff paper that contains digital information represented by the
@@ -336,17 +336,22 @@ capable of being reprogrammed to solve a full range of computing problems.
 It had 20 words of internal memory, each capable of storing a 10-digit decimal integer number.
 Programs and data were entered by setting switches and inserting punched cards.
 
-It goes without saying that digital computers have become much more powerful and
-sophisticated since then. For the 1950 census, the United States Census Bureau used the
+For the 1950 census, the United States Census Bureau used the
 UNIVAC I (Universal Automatic Computer I), the first commercially produced computer in the
 United States\footnote{Read more in \url{https://www.census.gov/history/www/innovations/}.}.
+
+It goes without saying that digital computers have become much more powerful and
+sophisticated since then.  The data collection process has been easily automated and
+scaled to a level that was unimaginable before.  However, ``where'' storing data is
+not the only challenge.  ``How'' to store data is also a challenge.  The next period of
+history addresses this issue.
 
 \begin{mainbox}{Digital age}
   \begin{itemize}
     \item Punched card (1725)
     \item 1890 census and Hollerith's tabulating machine (1890)
     \item ENIAC (1945)
-    \item UNIVAC I (1950)
+    \item UNIVAC I used by the United Census Bureau (1950)
   \end{itemize}
 \end{mainbox}
 
